--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             display: inline-block;
             position: relative;
             margin: 20px auto;
-            font-size: 5rem;
+            font-size: 3.5rem;
             color: #ffcc00;
         }
 
         .speaker-button {
-            position: absolute;
+            position: relative ;
             right: -30px;
             top: 50%;
             transform: translateY(-50%);
@@ -35,7 +35,7 @@
             padding: 5px;
             border-radius: 50%;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 20px;
         }
 
         footer {
